--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
 		}
 	},
 	"require": {
-		"php": "^7.1",
-		"dashifen/database": "<2.0",
-		"dashifen/request": "^1.0"
+		"php": "7.3.*",
+		"dashifen/database": "1.4.*",
+		"dashifen/request": "1.3.*"
 	},
 	"license": "MIT"
 }
