--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		}
 	},
 	"require": {
-		"php": "7.3.*",
+		"php": ">=7.3.*",
 		"dashifen/database": "1.4.*",
 		"dashifen/request": "1.3.*"
 	},
