--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
 		}
 	},
 	"require": {
-		"php": ">=7.3.*",
-		"dashifen/database": "1.4.*",
-		"dashifen/request": "1.3.*"
+		"php": ">=7.3",
+		"dashifen/database": "^1",
+		"dashifen/request": "^1"
 	},
 	"license": "MIT"
 }
